force-app/main/default/objects/XactlyExpress__XCSplitDetail__c/XactlyExpress__XCSplitDetail__c.object-meta.xml
<CustomObject>
    <label>XCSplitDetail</label>
    <nameField>
        <label>XCSplitDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCSplitDetail</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>