force-app/main/default/objects/XactlyExpress__XCSplitDetail__c/fields/XactlyExpress__CreditRuleProfileID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__CreditRuleProfileID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CreditRuleProfileID</label>
    <referenceTo>XactlyExpress__XCCreditRuleProfile__c</referenceTo>
    <relationshipLabel>XCSplitDetail</relationshipLabel>
    <relationshipName>XCSplitRuleDetail</relationshipName>
    <type>Lookup</type>
</CustomField>