force-app/main/default/objects/XactlyExpress__XCSplitDetail__c/fields/XactlyExpress__DealAttributeID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DealAttributeID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DealAttributeID</label>
    <referenceTo>XactlyExpress__XCDealAttribute__c</referenceTo>
    <relationshipName>XCSplitRuleDetail</relationshipName>
    <type>Lookup</type>
</CustomField>