force-app/main/default/objects/XactlyExpress__XCSplitDetail__c/fields/XactlyExpress__isAdvFormula__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__isAdvFormula__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAdvFormula</label>
    <type>Checkbox</type>
</CustomField>