force-app/main/default/objects/XactlyExpress__XCSplitDetail__c/fields/XactlyExpress__SplitLinkID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__SplitLinkID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SplitLinkID</label>
    <referenceTo>XactlyExpress__XCSplitLink__c</referenceTo>
    <relationshipLabel>XCSplitDetail</relationshipLabel>
    <relationshipName>XCSplitDetail</relationshipName>
    <type>Lookup</type>
</CustomField>