force-app/main/default/objects/XactlyExpress__XCSplitDetail__c/fields/XactlyExpress__SplitPercentage__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__SplitPercentage__c</fullName>
    <label>SplitPercentage</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>